--- a/demo/src/main/res/values/strings.xml
+++ b/demo/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="navdrawer_community">Community</string>
     <string name="navdrawer_foodidentify">Food Identify</string>
     <string name="navdrawer_healthrecord">Health Record</string>
+    <string name="navdrawer_BMI">BMI</string>
     <string name="navdrawer_settings">Settings</string>
     <string name="navdrawer_about">About</string>
 
