--- a/demo/src/main/res/values/strings.xml
+++ b/demo/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="navdrawer_BMI">BMI</string>
     <string name="navdrawer_settings">Settings</string>
     <string name="navdrawer_about">About</string>
+    <color name="white">#FFFFFF</color>
 
     <string name="button_share">Share</string>
 
